--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^5.16.0",
-    "husky": "^2.4.0",
-    "lint-staged": "^8.2.0",
-    "prettier": "^1.18.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.0.4",
+    "prettier": "1.16.4",
     "stylelint": "^10.1.0"
   },
   "scripts": {
@@ -21,11 +21,9 @@
   },
   "lint-staged": {
     "*.{js,md,css,html}": [
+      "eslint --fix",
       "prettier --trailing-comma es5 --single-quote --write",
       "git add"
-    ],
-    "yarn.lock": [
-      "git rm --cached"
     ]
   },
   "repository": {
