--- a/package.json
+++ b/package.json
@@ -5,11 +5,9 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
-    "eslint": "^5.16.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.0.4",
-    "prettier": "1.16.4",
-    "stylelint": "^10.1.0"
+    "standard": "^12.0.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,7 +19,7 @@
   },
   "lint-staged": {
     "*.{js,md,css,html}": [
-      "prettier --trailing-comma es5 --single-quote --write",
+      "standard --fix",
       "git add"
     ]
   },
